# CppSelfCheck_Sol

./: .gitignore  CMakeLists.txt  README.md  main.cpp  process_image.cpp
ConcreteLibrary/: CMakeLists.txt
ConcreteLibrary/include/Concrete/: ConcreteLibrary.hpp
ConcreteLibrary/src/: ConcreteLibrary.cpp
HeaderOnlyLibrary/: CMakeLists.txt
HeaderOnlyLibrary/include/HeaderOnly/: HeaderOnlyLibrary.hpp
